changed jpg to jpeg

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section id="home" class="home">
             <h2>Welcome!</h2>
             <div class="home-content">
-                <img src="connor_picture1.jpg" alt="Photo of Connor Howe" class="profile-photo">
+                <img src="connor_picture1.jpeg" alt="Photo of Connor Howe" class="profile-photo">
                 <div class="home-description">
                     <p>Hi, I'm Connor Howe, a PhD student specializing in quantum communications and distributed quantum computing. Welcome to my personal website, where you can explore my research, projects, and academic journey.</p>
                     <p>Feel free to connect with me and learn more about my work in quantum technologies!</p>
