--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="home-content">
                 <img src="connor_picture1.jpeg" alt="Photo of Connor Howe" class="profile-photo">
                 <div class="home-description">
-                    <p>Hi, I'm Connor Howe, a PhD student specializing in quantum communications and distributed quantum computing. Welcome to my personal website, where you can explore my research, projects, and academic journey.</p>
+                    <p>I'm Connor Howe, a PhD student specializing in quantum communications and distributed quantum computing. Welcome to my personal website, where you can explore my research, projects, and academic journey.</p>
                     <p>Feel free to connect with me and learn more about my work in quantum technologies!</p>
                 </div>
             </div>
@@ -81,7 +81,7 @@
         <section id="cv">
             <h2>Curriculum Vitae</h2>
             <p>You can download my CV here:</p>
-            <a href="Connor_CV.pdf" download>Download CV</a>
+            <a href="/home/cwhowe/Webpage/cwhowe.github.io/Connor_CV.pdf" download>Download CV</a>
         </section>
 
         <!-- Contact Section -->
